deploy/kube/brewskie.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: brewskie-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: brewskie
  template:
    metadata:
      labels:
        app: brewskie
    spec:
      containers:
        - name: brewskie
          image: oxycabhru/brewskie
          ports:
            - containerPort: 3000
