deploy/kube/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      db: mysql
  template:
    metadata:
      name: mysql-cluster
      labels:
        db: mysql
    spec:
      containers:
        - name: brewskie-db-mysql
          image: mysql
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-storage
              mountPath: /data
      volumes:
        - name: mysql-storage
          emptyDir: {}
        # use a more persistent storage,
        # though this is used for caching so it's really fine
