deploy/kube/umami.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: umami-deployment
spec:
  selector:
    matchLabels:
      app: umami
  template:
    metadata:
      labels:
        app: umami
    spec:
      containers:
        - name: umami
          image: docker.umami.dev/umami-software/umami:mysql-latest
          ports:
            - containerPort: 3000
