deploy/kube/brewskie-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: brewskie-lb
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      nodePort: 30000
  selector:
    app: brewskie
