deploy/kube/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-cluster
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    db: mysql
