deploy/kube/umami-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: umami-np
spec:
  type: NodePort
  selector:
    app: umami
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: "TCP"
